@@ -120,6 +120,7 @@ Version 2.3.0 - The river knows.
 		* Fixed memory exhaustion on high speed uploads
 		  Thanks to RRM for endless patience!
 		* Fix: Language English was not recognized and so reverted to "System default" at any change
+		* Fixed printf output (unicode2char()) on consoles incapable of UTF8
 
 	Vollstrecker:
 		* Unify copyright lines
